--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -5,7 +5,19 @@
 
     <form action="{% url 'common:login' %}" method="post">
         {% csrf_token %}
-        {% include "" %}
+        {% include "form_errors.html" %}
+        <div class="mb-3">
+            <label for="username">사용자ID</label>
+            <input type="text" name="username" id="username" class="form-control"
+            value={{form.username.value|default_if_none:""}} >
+
+        </div>
+        <div class="mb-3">
+            <label for="password">비밀번호</label>
+            <input type="text" name="password" id="password" class="form-control"
+            value={{form.passwrod.value|default_if_none:""}}>
+        </div>
+        <button type="submit" class="btn btn-primary">로그인</button>
 
 
     </form>
