--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,20 @@
     <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item">
+
+                {% if user.is_authenticated %}
+                {% comment %} appname coommon의 logout네임봐서 실행 {% endcomment %}
+                <a class="nav-link" href="{% url 'common:logout' %}"> {{user.username}} (로그아웃)</a>
+                {% comment %} request.is_authenticated임 이게 user로 바뀐거 {% endcomment %}
+                {% else %}
                 <a class="nav-link" href="{% url 'common:login' %}">로그인</a>
+                {% endif %}
+                {% comment %} 메소드는 models.py에서 @property에서 정의됨 없으면 AnanomouseUser {% endcomment %}
+            </li>
+            <li>
+                {% if not user.is_authenticated %}
+                <a class="nav-link" href="{% url 'common:signup' %}">회원가입</a>
+                {% endif %}
             </li>
         </ul>
     </div>
