--- a/templates/base.html
+++ b/templates/base.html
@@ -14,5 +14,9 @@
 {% endblock  %}
 {% comment %} static파일에서 찾아야하니까 bootstarap은 다 static {% endcomment %}
 <script src="{% static 'bootstrap.min.js' %}"></script>
+{% block script  %}
+
+{% endblock  %}
+
 </body>
 </html>
