--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -1,29 +1,94 @@
 {% extends "base.html" %}
+{% load pybo_filter %}
 {% block content %}
 
 <div class="container my-3">
     {% comment %} 질문 {% endcomment %}
+    {% if messages %}
+    <div class="alert alert-danger my-3" role="alert">
+        {% for message in messages %}
+        <strong>{{message.tags}} </strong>
+        <ul><li>{{message.message}} </li></ul>
+        {% endfor %}
+    </div>
+    {% endif %}
     <h2 class="border-bottom py-2">{{question.subject}} </h2>
     <div class="card my-3">
         {% comment %} 각각 네모네모하게 나눔 {% endcomment %}
-        <div class="card-body" style="white-space:pre-line;">{{question.subject}} </div>
+        <div class="card-body" >{{question.content}} </div>
         <div class="d-flex justify-content-end">
-            <div class="badge bg-light text-dark p-2">
-                {{question.create_date}}
+
+            {% if question.modify_date %}
+            <div class="badge bg-light text-dark p-2 text-start mx-3">
+                {% comment %} contaienr는 폭을 결정하는컨테이너
+                 flex컨테이너는 배치하는 컨테이너 {% endcomment %}
+                <div class="mb-2">modified at </div>
+                <div>{{question.modify_date}}</div>
             </div>
+            {% endif %}
+            <div class="badge bg-light text-dark p-2 text-start">
+                {% comment %} contaienr는 폭을 결정하는컨테이너
+                 flex컨테이너는 배치하는 컨테이너 {% endcomment %}
+                <div class="mb-2">{{question.author.username}} </div>
+                <div>{{question.create_date}}</div>
+            </div>
+        </div>
+        <div class="m-3">
+            <a href="javascript:void(0)" data-uri="{% url 'pybo:question_vote' question.id %}"
+            class="recommend btn btn-sm btn-outline-secondary">추천
+            <span class="badge rounded-pill bg-success">{{question.voter.count}} </span>
+        </a>
+            {% if request.user == question.author %}
+            <a href="{% url 'pybo:question_modify' question.id %}"
+            class="btn btn-sm btn-outline-secondary">수정</a>
+            <a href="javascript:void(0)" class="delete btn btn-sm btn-outline-secondary"
+            data-uri="{% url 'pybo:question_delete' question.id %}">삭제</a>
+
+            {% comment %} href url미리 만들어버리면 quesiton.id를 받는걸 몰라서 실행안됨 일단 비워놓기 {% endcomment %}
+            {% comment %} secondary=회색 outline 테두리만 칠하라 {% endcomment %}
+            {% endif %}
         </div>
     </div>
     {% comment %} 답변 {% endcomment %}
     <h5 class="border-bottom my-3 py-2">{{question.answer_set.count}}개의 답변이있음 </h5>
     {% for answer in  question.answer_set.all %}
+    <a id="answer_{{answer.id}}"></a>
+    {% comment %} redirect '{}#answer_{} 형식됨 url에서 끝에 / 했으므로 더할필요없음' {% endcomment %}
+    {% comment %} answer_{{ answer.id }}유일값이기떄문에 답변 id 이렇게 그냥 사용 {% endcomment %}
+    {% comment %} 동적으로 되는것이며 answer_1 answer_2로 작용됨 {% endcomment %}
     <div class="card my-3">
         <div class="card-body">
-            <div class="card-text" style="white-space: normal;">{{answer.content}} </div>
+            <div class="card-text" >{{answer.content}} </div>
         </div>
+        
         <div class="d-flex justify-content-end">
-            <div class="badge bg-light text-dark p-2">
+            {% comment %} dflext 안에안넣으면 확 펼쳐져서 되기때문에 좀자동줄일려면 dflex쓰는게 좋음 아니면 일일이 크기 조절해야함 {% endcomment %}
+        {% if answer.modify_date %}
+        <div class="badge bg-light text-dark p-2 text-start mx-3">
+            {% comment %} contaienr는 폭을 결정하는컨테이너
+             flex컨테이너는 배치하는 컨테이너 {% endcomment %}
+            <div class="mb-2">modified at </div>
+            <div>{{answer.modify_date}}</div>
+        </div>
+        {% endif %}
+            <div class="badge bg-light text-dark p-2 text-start">
+                <div class="mb-2">{{answer.author.username}} </div>
                 {{answer.create_date}}
             </div>
+        </div>
+        <div class="m-3">
+
+            <a href="javascript:void(0)" data-uri="{% url 'pybo:answer_vote' answer.id %}"
+            class="recommend btn btn-sm btn-outline-secondary">추천
+            <span class="badge rounded-pill bg-success">{{answer.voter.count}} </span>
+        </a>
+            {% if user.is_authenticated %}
+            <a href="{% url 'pybo:answer_modify' answer.id%}"
+            class="btn btn-sm btn-outline-secondary" >수정</a>
+            {% endif %}
+            {% comment %} 팝업창 javascript로 ㄱ {% endcomment %}
+            <a href="#" class="delete btn btn-sm btn-outline-secondary"
+            data-uri="{% url 'pybo:answer_delete' answer.id %}">삭제</a>
         </div>
     </div>
     {% endfor %}
@@ -62,4 +127,30 @@
     {% comment %} container는 레이아웃
     card는 테두리 그림자등 콘텐츠 각각의 데이터드를 그룹화후 시각화함 {% endcomment %}
 </div>
+{% comment %} addEventListener는 classname의 형식으로만 가능 {% endcomment %}
+{% comment %} location.href가 추천 url 삭제url로간다는것
+ {% endcomment %}
+{% endblock  %}
+{% block script %}
+<script type='text/javascript'>
+const delete_elements=document.getElementsByClassName("delete");
+Array.from(delete_elements).forEach(function(element){
+    element.addEventListener('click',function(){
+        if(confirm('정말삭제?')){
+            location.href=this.dataset.uri;
+        };
+    });
+});
+
+const recommend_elements=document.getElementsByClassName('recommend');
+Array.from(recommend_elements).forEach(function(element){
+    element.addEventListener('click',function(){
+        if(confirm('정말 추천?')){
+            location.href=this.dataset.uri;
+            
+        }
+    });
+
+});
+</script>
 {% endblock  %}
